checkpolicy/tests/negative/invalid_module_version.te
module invalid_module_version;

require {
	type foo_t;
}
